5 спринт, версия 2. Поменял HashMap на Map в InMemoryTaskManager. Изменил имена методов и полей. Убрал копирование задачи в InMemoryHistoryManager. Теперь в истории хранится непосредственно задача.