@@ -6,6 +6,7 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager{
+    private final int MAX_COUNT = 10;
 
     private ArrayList<Task> historyList = new ArrayList<>();
     @Override
@@ -15,11 +16,11 @@ public class InMemoryHistoryManager implements HistoryManager{
 
     @Override
     public void add(Task task) { //Добавление задачи в историю
-        if (historyList.size() != 10)
-            historyList.add(new Task(task));
+        if (historyList.size() < MAX_COUNT)
+            historyList.add(task);
         else {
-            historyList.remove(0);
-            historyList.add(new Task(task));
+            historyList.removeFirst();
+            historyList.add(task);
         }
     }
 
